--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 		<button type= "button" onclick= "cipher()" class="btn-large">Cifrar</button>
 		<button type= "button" onclick= "decipher()" class="btn-large">Descifrar</button>
 	</div>
+
+  <section class="container" id="cipherMsje">
+    <div id="caja3"></div>
+  </section>
+
+   <section class="container" id="decipherMsje">
+    <div id="caja3D"></div>
+  </section>
+  
 	
 	<script src="js/app.js"></script>
 </body>
